* NEXT
- Hats are now rendered for the last word of links in org-mode.
- The default hat color and shape is now identified by the symbol
  ~default~.
- When loading hatty, it will now try to pick colors appropriate for
  the color theme of the user.

* 0.2.2 [2024-09-04 Wed]
- Fix rendering bug pertaining to the raise display property.
- Decrease required Emacs version to 26.1.

* 0.2.1 [2024-09-04 Wed]
- Update documentation.

* 0.2.0 [2024-08-31 Sat]
- Color specification is now made according to Emacs rules, not SVG.
- Customization variables may now be customized using ~customize~.
- ~hatty-mode~ is now buffer-local.  Use ~global-hatty-mode~ to enable
  it globally.
- Add autoload cookies for ~hatty-mode~ and ~global-hatty-mode~.

* 0.1.0 [2024-08-21 Wed]
Initial release.